WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156602
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::CachedResource::addClientToSet + 27
https://bugs.webkit.org/show_bug.cgi?id=156602
Summary
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::Cache...
Dean Jackson
Reported
2016-04-14 14:54:05 PDT
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::CachedResource::addClientToSet + 27
Attachments
Patch
(5.65 KB, patch)
2016-04-14 14:59 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2016-04-14 14:54:36 PDT
<
rdar://problem/18921091
>
Dean Jackson
Comment 2
2016-04-14 14:59:00 PDT
Created
attachment 276435
[details]
Patch
Simon Fraser (smfr)
Comment 3
2016-04-14 15:01:09 PDT
Comment on
attachment 276435
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=276435&action=review
> LayoutTests/transitions/crossfade-transition-expected.txt:1 > +ABC
Would be a nicer to say "Test passes if there is no crash".
Dean Jackson
Comment 4
2016-04-14 15:36:18 PDT
Committed
r199561
: <
http://trac.webkit.org/changeset/199561
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug