CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::CachedResource::addClientToSet + 27 https://bugs.webkit.org/show_bug.cgi?id=156602 <rdar://problem/18921091>

Reviewed by Simon Fraser.

Source/WebCore:

The CSS property list-style-image is inherited, so a transition on a parent
might cause a transition on a child. On that child, the value might be between
two generated crossfade images which haven't yet resolved, causing a crash.

Test: transitions/crossfade-transition.html

* css/CSSCrossfadeValue.cpp:
(WebCore::CSSCrossfadeValue::blend): Return null if there are no cached images.
* page/animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc): If we don't have an actual image to blend between, fall
out to the default case.

LayoutTests:

Tests that an animation between two inherited crossfade elements will not crash.

* transitions/crossfade-transition-expected.txt: Added.
* transitions/crossfade-transition.html: Added.

Canonical link: https://commits.webkit.org/174701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199561 268f45cc-cd09-0410-ab3c-d52691b4dbfc